2.0.1 /
[Alexandr Topilski]

2.0.0 / March 2, 2019
[Alexandr Topilski]
- Enterprise
- Save password

1.27.3 / February 27, 2019
[Alexandr Topilski]
- Stabilization

1.27.2 / February 21, 2019
[Alexandr Topilski]
- Fixed socket leaks

1.27.1 / February 16, 2019
[Alexandr Topilski]
- [Redis] Secure connection only in PRO version
- [RocksDB] Update sources to version 5.18.0

1.27.0 / February 12, 2019
[Alexandr Topilski]
- [Redis] SSH + SSL (ElastiCache connections)

1.26.3 / February 9, 2019
[Alexandr Topilski]
- [Redis] Fixed sentinels settings
- [Redis] SSH dialog typo

1.26.2 / February 2, 2019
[Alexandr Topilski]
- [Redis] Fixed discovery cluster

1.26.1 / January 13, 2019
[Alexandr Topilski]
- Deleting multiple keys UI #92

1.26.0 / December 29, 2018
[Alexandr Topilski]
- Fixed rendering issues in explorer tree
- [UpscaleDB] Removed api

1.25.1 / December 25, 2018
[Alexandr Topilski]
- Fixed rendering tree issues

1.25.0 / December 23, 2018
[Alexandr Topilski]
- Viewer for LIST and HASH types

1.24.2 / December 17, 2018
[Alexandr Topilski]
- Stabilization

1.24.1 / December 16, 2018
[Alexandr Topilski]
- Welcome tab

1.24.0 / December 9, 2018
[Alexandr Topilski]
- [Redis] ZPOPMAX, ZPOPMIN commands
- [Redis] Clients monitor
- [DynomiteDB] Added support

1.23.1 / December 2, 2018
[Alexandr Topilski]
- Get key type context menu item
- Get value types by server version
- [Redis] Unlink command

1.23.0 / November 26, 2018
[Alexandr Topilski]
- Set client name
- Fixed create database update tree action
- [RocksDB] Default db name
- [SSDB] QPUSH, QRANGE commands

1.22.3 / November 22, 2018
[Alexandr Topilski]
- Stabilization

1.22.2 / November 21, 2018
[Alexandr Topilski]
- Removed not needed checks
- [RocksDB] Update sources to version 5.18.0

1.22.1 / November 19, 2018
[Alexandr Topilski]
- Rename branch

1.22.0 / November 12, 2018
[Alexandr Topilski]
- Up core lib to 1.4.0 

1.21.3 / November 8, 2018
[Alexandr Topilski]
- LZ4/Snappy/Bzip2 views
- BASE64 view