@@ -1,5 +1,6 @@
 2.0.1 /
 [Alexandr Topilski]
+- More Redisearch commands
 
 2.0.0 / March 2, 2019
 [Alexandr Topilski]
