@@ -1,5 +1,7 @@
 2.0.1 /
 [Alexandr Topilski]
+- Changed icons
+- [Redis] More Redisearch commands
 
 2.0.0 / March 2, 2019
 [Alexandr Topilski]
